# opentulpa

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  railway.toml  start.sh
docs/: ARCHITECTURE.md  CHAT_COOKBOOK.md  DEPLOYMENT.md  EXTERNAL_TOOL_SAFETY_CHECKLIST.md
scripts/: manager.py  start_telegram.sh
tests/: test_approval_broker.py  test_approval_endpoints.py  test_approval_execution_orchestrator.py  test_automation_delete_endpoint.py  test_browser_use_compaction.py  test_browser_use_tools.py  test_chat_api_e2e.py  test_claim_check_retry_limit.py  test_completion_claim_check.py  test_context_compaction_window.py  test_execution_boundary_tools.py  test_fetch_link_content_crawl4ai.py  test_guardrail_live_llm_e2e.py  test_guardrail_real_agent_e2e.py  test_ids.py  test_internal_api_auth.py  test_link_alias_service.py  test_main_bootstrap.py  test_routine_tools.py  test_runtime_input_debounce.py  test_runtime_stream_fallback.py  test_scheduler_routine_scope.py  test_skill_api_endpoints.py  test_skill_store_service.py  test_stream_output_sanitization.py  test_telegram_approval_adapter.py  test_telegram_approval_parsing.py  test_telegram_approval_recovery.py  test_telegram_callback_parsing.py  test_telegram_client_resilience.py  test_telegram_error_mapping.py  test_telegram_fresh_command.py  test_telegram_loading_sequence.py  test_telegram_low_signal_filter.py  test_telegram_media_target.py  test_telegram_start_onboarding.py  test_telegram_stream_segments.py  test_telegram_stream_timeout.py  test_telegram_typing_indicator.py  (+6 more)
(+164 files in other folders)
